// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: Layout renders default state for first time user correctly 1`] = `
Array [
  <NavBar
    isChromeExt={false}
    menuWidth={32}
  />,
  <div
    activeItem=""
    id="LeftMenu"
    isMenuExpanded={true}
    setIsMenuExpanded={[Function]}
  />,
  <div
    className="MuiBox-root MuiBox-root-19 HookGlobalStyles-main-13"
    style={
      Object {
        "marginLeft": 256,
      }
    }
  >
    <div />
  </div>,
]
`;

exports[`component: Layout renders default state for non first time user correctly 1`] = `
Array [
  <NavBar
    isChromeExt={false}
    menuWidth={32}
  />,
  <div
    activeItem=""
    id="LeftMenu"
    isMenuExpanded={true}
    setIsMenuExpanded={[Function]}
  />,
  <div
    className="MuiBox-root MuiBox-root-25 HookGlobalStyles-main-13"
    style={
      Object {
        "marginLeft": 256,
      }
    }
  >
    <div />
  </div>,
]
`;

exports[`component: Layout renders menu collapsed state 1`] = `
Array [
  <NavBar
    isChromeExt={false}
    menuWidth={10}
  />,
  <div
    activeItem=""
    id="LeftMenu"
    isMenuExpanded={false}
    setIsMenuExpanded={[Function]}
  />,
  <div
    className="MuiBox-root MuiBox-root-31 HookGlobalStyles-main-13"
    style={
      Object {
        "marginLeft": 80,
      }
    }
  />,
  <UnlockPasswordDialog />,
]
`;

exports[`component: Layout renders passwordRequired state for first time user correctly 1`] = `
Array [
  <NavBar
    isChromeExt={false}
    menuWidth={32}
  />,
  <div
    activeItem=""
    id="LeftMenu"
    isMenuExpanded={true}
    setIsMenuExpanded={[Function]}
  />,
  <div
    className="MuiBox-root MuiBox-root-22 HookGlobalStyles-main-13"
    style={
      Object {
        "marginLeft": 256,
      }
    }
  >
    <GetStarted />
  </div>,
]
`;

exports[`component: Layout renders passwordRequired state for non first time user correctly 1`] = `
Array [
  <NavBar
    isChromeExt={false}
    menuWidth={32}
  />,
  <div
    activeItem=""
    id="LeftMenu"
    isMenuExpanded={true}
    setIsMenuExpanded={[Function]}
  />,
  <div
    className="MuiBox-root MuiBox-root-28 HookGlobalStyles-main-13"
    style={
      Object {
        "marginLeft": 256,
      }
    }
  />,
  <UnlockPasswordDialog />,
]
`;
